tests/neg-custom-args/safe-init/inner5.scala
trait Foo {
  @scala.annotation.init
  class B {
    foo(10)                    // error
  }

  def foo(x: Int) = 5 + x
}